--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --require babel-core/register -- require ./test/test_helper.js --recursive",
     "test:watch": "npm test -- --watch",
-    "start": "babel-node index.js"
+    "start": "babel-node index.js",
+    "start:watch": "nodemon index.js --exec babel-node"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,8 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "nodemon": "^1.18.11"
   },
   "babel": {
     "presets": [
