--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -33,6 +33,7 @@
   },
   "description": "",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "immutable": "^4.0.0-rc.12",
     "redux": "^4.0.1",
     "socket.io": "^2.2.0"
