--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -34,6 +34,7 @@
   "description": "",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "immutable": "^4.0.0-rc.12",
     "redux": "^4.0.1",
     "socket.io": "^2.2.0"
