--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -61,6 +61,7 @@
     ]
   },
   "dependencies": {
+    "cross-env": "^5.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
