--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -81,6 +81,7 @@
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-scripts": "^3.0.0",
     "redux": "^4.0.1",
     "serve": "^11.0.0",
     "socket.io-client": "^2.2.0",
