--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -3,38 +3,54 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --require babel-core/register --require ./test/test_helper.js --recursive",
+    "test": "./node_modules/mocha/bin/mocha --require @babel/register --require ./test/test_helper.js --recursive",
     "test:watch": "npm test -- --watch",
-    "start": "babel-node index.js",
-    "start:watch": "nodemon index.js --exec babel-node"
+    "start": "babel-node src/index.js",
+    "start:watch": "nodemon src/index.js --exec babel-node",
+    "start:ts": "ts-node src/index.ts",
+    "start:ts:watch": "ts-node-dev src/index.ts",
+    "test:ts": "./node_modules/mocha/bin/mocha -r ts-node/register -r ./test/test_helper.ts ./test/*.spec.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.0",
+    "@babel/node": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "^7.4.4",
+    "@types/chai": "^4.1.7",
+    "@types/chai-immutable": "https://github.com/jsebrech/chai-immutable-typings",
+    "@types/express": "^4.17.0",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.12",
+    "@types/redux": "^3.6.0",
+    "@types/socket.io": "^2.1.2",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "chai": "^4.2.0",
     "chai-immutable": "^2.1.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "mocha": "^6.1.4",
-    "nodemon": "^1.18.11"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0",
+    "ts-node-dev": "^1.0.0-pre.40",
+    "typescript": "^3.5.2"
   },
   "description": "",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/polyfill": "^7.4.4",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "redux": "^4.0.1",
